--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
 .pokemon-button {
-    background-color: aqua;
+    background-color: rgb(247, 235, 208);
     color: #000;
     border: ridge;
-    border-color: orange;
+    border-color: rgb(121, 4, 4);
     padding: 10px 15px;
     margin: 5px;
     cursor: pointer;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: large;
 }
