--- a/css/styles.css
+++ b/css/styles.css
@@ -9,3 +9,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
 }
+
+body {
+    background-color: rgb(196, 250, 250);
+}
