--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 .modal {
     display: none;
     position: fixed;
-    top: 20;
+    top: 20px;
     left: 0;
     width: 100%;
     height: 100%;
