--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+.pokemon-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+}
+
 .pokemon-button {
     background-color: rgb(247, 235, 208);
     color: #000;
@@ -8,6 +16,7 @@
     cursor: pointer;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
+    
 }
 
 body {
@@ -24,6 +33,7 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
+    
 }
 
 .modal-content {
@@ -32,6 +42,12 @@ body {
     border-radius: 5px;
     text-align: center;
     position: relative;
+    display: block;
+    margin: 20%;
+    background-color: rgb(238, 239, 207);
+    font-family: monospace;
+    font-size: 40px;
+    
 }
 
 .close {
@@ -44,5 +60,13 @@ body {
 
 #modal-image {
     max-width: 100%;
-    height: auto;
+    height: 300px;
+    
+
+}
+
+h1 {
+    font-family: monospace;
+    font-size: 80px;
+    text-align: center;
 }
