--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
     justify-content: center;
     list-style: none;
     padding: 50px;
+    border-style: ridge;
+    border-color: rgb(121, 4, 4);
 }
 
 .pokemon-button {
@@ -77,9 +79,8 @@ h1 {
     text-align: center;
     text-shadow: 5px 5px rgb(247, 235, 208);
     color: rgb(121, 4, 4);
-    border-style: double;
-    margin-left: 150px;
-    margin-right: 150px;
+   
+    
     
     
     
