--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
     text-align: center;
     position: relative;
     display: block;
-    margin: 20%;
+    margin: auto;
     background-color: rgb(238, 239, 207);
     font-family: monospace;
     font-size: 40px;
