--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,14 @@
 .pokemon-list {
-    display: flex;
+     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    list-style: none;
+    list-style: none; 
     padding: 50px;
-    border-style: ridge;
-    border-color: rgb(121, 4, 4);
 }
 
 .pokemon-button {
     background-color: rgb(247, 235, 208);
-    color: #000;
+    color: rgb(121, 4, 4);
     border: ridge;
     border-color: rgb(121, 4, 4);
     padding: 10px 15px;
@@ -18,11 +16,12 @@
     cursor: pointer;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
+    border-radius: 12%;
     
 }
 
 body {
-    background-color: rgb(196, 250, 250);
+    background-color: rgb(170, 221, 230);
 }
 
 .modal {
@@ -76,13 +75,15 @@ body {
 h1 {
     font-family: monospace;
     font-size: 80px;
-    text-align: center;
-    text-shadow: 5px 5px rgb(247, 235, 208);
+    -webkit-text-stroke: 2px;
+    -webkit-text-stroke-color: white;
     color: rgb(121, 4, 4);
-   
-    
-    
-    
-    
 
 }
+
+.navbar {
+    background-color: rgb(0, 0, 0);
+    
+    
+}
+
