--- a/css/styles.css
+++ b/css/styles.css
@@ -32,19 +32,6 @@ body {
     border-radius: 12%;
     
   }
-
-
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    justify-content: center;
-    align-items: center;
-  }
   
   .modal-content {
     background-color: #fff;
@@ -61,8 +48,13 @@ body {
     text-align: center;
     text-shadow: 2px 2px rgb(255, 255, 255);
   }
-
-
+.modal-body img {
+    width: 500px;
+    height: auto;
+    border-style: ridge;
+    border-color: rgb(121, 4, 4);
+    background-color: white;
+}
   
   .close {
     position: absolute;
