--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ body {
     color: rgb(121, 4, 4);
     text-align: center;
     text-shadow: 2px 2px rgb(255, 255, 255);
+    
   }
 .modal-body img {
     width: 500px;
@@ -54,6 +55,11 @@ body {
     border-style: ridge;
     border-color: rgb(121, 4, 4);
     background-color: white;
+    
+}
+
+li {
+    list-style: none;
 }
   
   .close {
