--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(21, 102, 117);
+    background-color: #0e3d29 ;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
@@ -21,7 +21,7 @@ body {
   
   .pokemon-button {
     width: 130px;
-    height: auto;
+    height: 130px;
     background-color: rgb(121, 4, 4);
     color: rgb(247, 235, 208);
     border: ridge;
