--- a/css/styles.css
+++ b/css/styles.css
@@ -1,134 +1,141 @@
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: -webkit-radial-gradient(circle, #056521, #012a13);
-    font-size:30px;
-  }
-  
-  .navbar {
-    background-color: rgb(0, 0, 0);
-    border-style: ridge;
-    border-color: rgb(247, 235, 208);
-  }
-  
-  .pokemon-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style: none;
-    padding: 50px;
-    border-style: ridge;
-    border-color: rgb(247, 235, 208);
-    font-size: 20px;
-  }
-  
-  .pokemon-button {
-    width: 130px;
-    height: 130px;
-    background-color: rgb(121, 4, 4);
-    color: rgb(247, 235, 208);
-    border: ridge;
-    border-color: rgb(247, 235, 208);
-    padding: 10px 15px;
-    margin: 5px;
-    cursor: pointer;
-    border-radius: 12%;
-    
-  }
-  
-  .modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-    position: relative;
-    display: block;
-    margin: auto;
-    background-color: rgb(238, 239, 207);
-    font-family: monospace;
-    font-size: 30px;
-    color: rgb(121, 4, 4);
-    text-align: left;
-    text-shadow: 2px 2px rgb(255, 255, 255);
-   
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background: -webkit-radial-gradient(circle, #056521, #012a13);
+  font-size: 30px;
+}
 
-    
-    
-  }
+.navbar {
+  background-color: rgb(0, 0, 0);
+  border-style: ridge;
+  border-color: rgb(247, 235, 208);
+}
+
+.pokemon-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  padding: 50px;
+  border-style: ridge;
+  border-color: rgb(247, 235, 208);
+  font-size: 20px;
+}
+
+.pokemon-button {
+  width: 130px;
+  height: 130px;
+  background-color: rgb(121, 4, 4);
+  color: rgb(247, 235, 208);
+  border: ridge;
+  border-color: rgb(247, 235, 208);
+  padding: 10px 15px;
+  margin: 5px;
+  cursor: pointer;
+  border-radius: 12%;
+  transition: transform 0.2s;
+}
+
+.pokemon-button:hover {
+  transform: scale(1.5);
+  cursor: pointer;
+}
+
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+  display: block;
+  margin: auto;
+  background-color: rgb(238, 239, 207);
+  font-family: monospace;
+  font-size: 30px;
+  color: rgb(121, 4, 4);
+  text-align: left;
+  text-shadow: 2px 2px rgb(255, 255, 255);
+
+
+
+
+}
+
 .modal-body img {
-    width: 500px;
-    height: auto;
-    border-style: ridge;
-    border-color: rgb(121, 4, 4);
-    background-color: white;
-    
-    
+  width: 500px;
+  height: auto;
+  border-style: ridge;
+  border-color: rgb(121, 4, 4);
+  background-color: white;
+
+
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
-  
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
-    cursor: pointer;
-  }
-  
-  
-  h1 {
-    font-family: monospace;
-    font-size: 100px;
-    -webkit-text-stroke: 2px;
-    -webkit-text-stroke-color: rgb(247, 235, 208);
-    color: rgb(121, 4, 4);
-    text-align: justify;
-  }
-  
-  /* Media queries for responsiveness */
-  @media (max-width: 768px) {
-    /* Adjust styles for screens up to 768px wide */
-    .pokemon-list {
-      padding: 20px;
-    }
-    
-    .pokemon-button {
-      font-size: medium;
-    }
-    
-    h1 {
-      font-size: 60px;
-    }
-  }
-  
-  @media (max-width: 576px) {
-    /* Adjust styles for screens up to 576px wide (small screens) */
-    .pokemon-button {
-      font-size: small;
-    }
-    
-    h1 {
-      font-size: 40px;
-    }
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+
+h1 {
+  font-family: monospace;
+  font-size: 100px;
+  -webkit-text-stroke: 2px;
+  -webkit-text-stroke-color: rgb(247, 235, 208);
+  color: rgb(121, 4, 4);
+  text-align: justify;
+}
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+
+  /* Adjust styles for screens up to 768px wide */
+  .pokemon-list {
+    padding: 20px;
   }
 
-  .modal-title {
+  .pokemon-button {
+    font-size: medium;
+  }
+
+  h1 {
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 576px) {
+
+  /* Adjust styles for screens up to 576px wide (small screens) */
+  .pokemon-button {
+    font-size: small;
+  }
+
+  h1 {
     font-size: 40px;
   }
+}
 
-  #searchButton {
-    color: white;
-    background-color: rgb(121, 4, 4);
-    border-style: ridge;
-    border-color: rgb(247, 235, 208);
+.modal-title {
+  font-size: 40px;
+}
 
-  }
+#searchButton {
+  color: white;
+  background-color: rgb(121, 4, 4);
+  border-style: ridge;
+  border-color: rgb(247, 235, 208);
 
-  #searchInput {
-    background-color: white;
-    border-style: ridge;
-    border-color: rgb(247, 235, 208);
-  }
+}
 
-  
+#searchInput {
+  background-color: white;
+  border-style: ridge;
+  border-color: rgb(247, 235, 208);
+}
